tests/fixtures/positive/comments/UndocumentedPublicProperty.kt
package comments

class Example {
    val publicProp = 1
}
