tests/fixtures/negative/comments/UndocumentedPublicProperty.kt
package comments

class Example {
    /** Documented property. */
    val publicProp = 1
}
